--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div class="row">
     <div class="large-12 columns">
       <app-aside> </app-aside>
-      <products> </products>
+      <router-outlet> </router-outlet>
     </div>
 </div>
+<app-login></app-login>
 <app-footer> </app-footer>
