--- a/client/src/app/components/product/product.component.css
+++ b/client/src/app/components/product/product.component.css
@@ -17,4 +17,15 @@
   height: 50px;
 }
 
+.product{
+  box-shadow : 0px 15px 10px rgb(89, 14, 0);
+  background-color : rgb(89, 14, 0) ;
+  margin: 20px;
+  width : 26%;
+}
+
+.product img{
+  padding-top:10px;
+}
+
 
