--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,10 @@
-<app-header> </app-header>
+<app-header #header> </app-header>
 <div class="row">
     <div class="large-12 columns">
       <app-aside> </app-aside>
       <router-outlet> </router-outlet>
     </div>
 </div>
-<app-login></app-login>
+<app-login *ngIf="header.isLoginClicked()&& ! header.getLoginStatus()" ></app-login>
+<app-signup *ngIf="header.isSignupClicked()&& ! header.getLoginStatus()"></app-signup>
 <app-footer> </app-footer>
