--- a/client/src/app/components/aside/aside.component.html
+++ b/client/src/app/components/aside/aside.component.html
@@ -1,6 +1,6 @@
-<div class="large-4 columns">
+<div class="large-3 columns">
   <div class="row file-list">
-    <div class="small-6 columns">
+    <div class=" columns">
       <ul>
         <li><i class="fi-torso"></i>&nbsp;&nbsp;Multimedia</li>
           <ul>
