--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
- <div class="row">
-    <div class="large-6 columns">
+ <div class="row log-in">
+    <div class="large-12 columns">
       <div class="signup-panel">
         <p class="welcome"> Login form </p>
         <div>
