--- a/client/src/app/components/aside/aside.component.css
+++ b/client/src/app/components/aside/aside.component.css
@@ -1,54 +1,78 @@
-.file-list{
-  margin-top: 25px;
+#cd-cart {
+	top: 0;
+	height: 80%;
+  padding-top: 50px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  z-index: 3;
+  background: #FFF;
 }
-.file-list ul {
-  list-style: none;
-  margin-bottom: 12px;
+#cd-cart.speed-in {
+  right: 0;
 }
-
-.file-list img {
-  border-radius: 5px;
-  padding-bottom: 20px;
+#cd-cart > * {
+  padding: 0 1em;
 }
-
-
-.file-list hr {
-  margin-bottom: 4px;
-  margin-top: 2px;
+#cd-cart h2 {
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 1em 0;
 }
-
-.file-list .folder {
-  width: 140px;
+#cd-cart .cd-cart-items {
+  padding: 0;
 }
-
-.file-list .subfolder {
-  width: 120px;
+#cd-cart .cd-cart-items li {
+  position: relative;
+  padding: 1em;
+  border-top: 1px solid #e0e6ef;
 }
-
-.file-list .fi-folder, .file-list .fi-torso, .file-list .fi-torsos, .file-list .fi-torsos-all, .file-list .fi-torso-business, .file-list .fi-laptop, .file-list .fi-megaphone {
-  color: #0b4f69;
+#cd-cart .cd-cart-items li:last-child {
+  border-bottom: 1px solid #e0e6ef;
 }
-
-.file-list .fi-page {
-  color: #6f6f6f;
+#cd-cart .cd-qty, #cd-cart .cd-price {
+  color: #a5aebc;
 }
-
-.file-list .fi-yen, .file-list .fi-dollar, .file-list .fi-euro {
-  color: #e5c100;
+#cd-cart .cd-price {
+  margin-top: .4em;
 }
-
-.file-list .fi-graph-trend, .file-list .fi-graph-pie, .file-list .fi-graph-bar {
-  color: #7a3e48;
+#cd-cart .cd-item-remove {
+  right: 1em;
+  top: 50%;
+  bottom: auto;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
 }
-
-.file-list .fi-social-twitter, .file-list .fi-social-tumblr, .file-list .fi-social-facebook {
-  color: #336699;
+.no-touch #cd-cart .cd-item-remove:hover {
+  background-color: #e0e6ef;
 }
-
-.file-list .fi-social-apple, .file-list .fi-social-windows {
-  color: #8cc739;
+#cd-cart .cd-cart-total {
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
-
-.aside{
-  width : 20%;
+#cd-cart .cd-cart-total span {
+  float: right;
+}
+#cd-cart .cd-cart-total::after {
+  /* clearfix */
+  content: '';
+  display: table;
+  clear: both;
+}
+#cd-cart .checkout-btn {
+  display: block;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background: #7dcf85;
+  color: #FFF;
+  text-align: center;
+}
+.no-touch #cd-cart .checkout-btn:hover {
+  background: #a2dda8;
+}
+#place-holder{
+  width:100%;
+  min-height : 100%;
 }
