--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,5 +1,3 @@
-<link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
-
 <header class="header">
 	<nav class="menu">
 		<h1 class="name"><i class="fi-widget"></i> PDC Store </h1>
@@ -13,7 +11,11 @@
 			<li class=""><a class="signup" href="#" (click) = "onSignupClicked()">Signup</a></li>
 		</ul>
 		<ul *ngIf="loginStatus"class="inline-list account-action">
-			<li><a href="#" class="signup" (click) = "onDisconnect()" >Disconnect</a></li>
+      <li>{{credit}}$</li>
+
+			<li><a href="#" routerLink="/user-products">Mes produits</a></li>
+			<li><a (click)="onRechargeClicked()">Charge</a></li>
+			<li><a class="signup" routerLink="/"(click) = "onDisconnect()" >Disconnect</a></li>
 		</ul>
 		<a class="account" href="#"><i class="fi-unlock"></i></a>
 	</nav>
