--- a/client/src/app/components/product/product.component.css
+++ b/client/src/app/components/product/product.component.css
@@ -18,9 +18,9 @@
 }
 
 .product{
-  box-shadow : 0px 15px 10px rgb(89, 14, 0);
+  box-shadow : 0px 15px 10px rgb(20,20 ,20);
   background-color : rgb(89, 14, 0) ;
-  margin: 20px;
+  margin : 4.167%;
 }
 
 .product img{
