--- a/client/src/app/components/signup/signup.component.css
+++ b/client/src/app/components/signup/signup.component.css
@@ -29,4 +29,6 @@
   position : fixed;
   top : 0px;
   left : 400px;
+  background-color : lightblue;
+  box-shadow : 0px 15px 10px rgb(20,20 ,20);
 }
